# PirateSoftwareGameJam15Entry

./: Cargo.toml  game.wasm  index.html  main.rs
.github/workflows/: deploy.yml
assets/floor/: floor.pixil
assets/potions/: bottle_moved.pixil
assets/soundtrack/: soundtrack.fms
assets/wizard/: Player walk  (1).pixil
assets/zombie/: Zombie with 2 arms with complete walk.pixil
src/: app.rs  constants.rs  cooldown.rs  enemy.rs  main.rs  maths.rs  player.rs  potions.rs  sprite.rs
src/collisions/: line.rs  mod.rs  point.rs  triangle.rs
src/ecs/: commands.rs  entity.rs  mod.rs  query.rs  schedule.rs  world.rs
web/: mq_js_bundle.js
