[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#

[dependencies]
macroquad = { git = "https://github.com/not-fl3/macroquad.git", rev="7d49714" }
rand = "0.8.5"
getrandom = { version = "*", features = ["js"] }